src/test/resources/ill-typed/argument-type-mismatch-4.stella
language core;

fn Nat::add(n : Nat) -> (fn(Nat) -> Nat) {
  return fn(m : Nat) {
    return Nat::rec(n, m, fn(i : Nat) {
      return fn (r : Nat) {
        return succ(r);
      };
    });
  };
}
fn main(x : Nat) -> Nat {
    return (Nat::add(x, 3));
}